- fix margin/spacing before release

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -32,6 +32,10 @@ body {
   line-height: 2rem;
 }
 
+p.anchor {
+  padding-top: 6rem;
+}
+
 div.page {
   padding-top: 9rem;
 }
